--- a/Frontend/pcpokemon-api-app/package.json
+++ b/Frontend/pcpokemon-api-app/package.json
@@ -36,6 +36,8 @@
     "autoprefixer": "^10.4.16",
     "babel-loader": "^9.1.3",
     "eslint": "^8.45.0",
+    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
     "jest": "^29.7.0",
